pushed images on s3 bucket with Prisma
