# server/routes/image.js
@@ -1,10 +1,10 @@
 const express = require('express');
 const router = express.Router();
 const { v4: uuidv4 } = require('uuid');
-const { pool } = require('../config');
 const multer = require('multer');
-const { uploadFile } = require('../s3')
-
+const { uploadFile, getFileStream } = require('../s3')
+const { PrismaClient } = require('@prisma/client')
+const prisma = new PrismaClient()
 
 
 
@@ -23,73 +23,40 @@ const imageUpload = multer({
 
 const upload = multer({ storage: '/dist', });
 
-// Image Upload Routes
-// router.post('/', imageUpload.single('file'), async (req, res) => {
-//     console.log("req----<", req.file)
-//     const { filename, mimetype, size } = req.file;
-//     console.log("filename --->", filename, mimetype, size)
-//     const filepath = req.file.path;
-//     console.log("filepath --->", filepath)
 
-//     const insertQuery = 'INSERT INTO images (id, filename, filepath, mimetype, size) VALUES ($1, $2, $3, $4, $5) RETURNING *';
-//     const values = [uuidv4(), filename, filepath, mimetype, size];
+router.get('/:key', async (req, res) => {
+    const key = req.params.Key;
+    const readStream = getFileStream(key)
 
+    readStream.pipe(res)
 
-//     const s3Result = await uploadFile(req.file)
-//     console.log("s3Result -=--", s3Result)
-
-
-//     // pool.query(insertQuery, values, async (error, result) => {
-//     //     if (error) {
-//     //         console.error('Error inserting image:', error);
-//     //         res.json({ success: false, message: 'upload failed', stack: error.stack });
-//     //     } else {
-//     //         const insertedImage = result.rows[0];
-//     //         console.log('Image inserted successfully:', insertedImage);
-//     //         const s3Result = await uploadFile(req.file)
-//     //         console.log("s3Result -=--", s3Result)
-//     //         res.status(201).json({
-//     //             success: true,
-//     //             filename
-//     //         });
-
-//     //     }
-//     // })
-// });
-
+})
 
 router.post('/', imageUpload.single('file'), async (req, res) => {
     const file = req.file
-    console.log("req.file ---->", req.file)
-    console.log("file --->", file)
-
     const { filename, mimetype, size } = req.file;
 
-    const result = await uploadFile(file)
-    // await unlinkFile(file.path)
-    console.log("result ---->", result)
+    const s3Result = await uploadFile(req.file)
 
-    const insertQuery = 'INSERT INTO images (id, filename, filepath, mimetype, size) VALUES ($1, $2, $3, $4, $5) RETURNING *';
-    const values = [uuidv4(), result?.Key, file.path, mimetype, size];
 
-    pool.query(insertQuery, values, async (error, result) => {
-        if (error) {
-            console.error('Error inserting image:', error);
-            res.json({ success: false, message: 'upload failed', stack: error.stack });
-        } else {
-            const insertedImage = result.rows[0];
-            console.log('Image inserted successfully:', insertedImage);
-            // const s3Result = await uploadFile(req.file)
-            // console.log("s3Result -=--", s3Result)
-            // res.status(201).json({
-            //     success: true,
-            //     filename
-            // });
 
-        }
-    })
-    const description = req.body.description
-    res.send({ imagePath: `/images/${result.Key}` })
+    if (s3Result) {
+        console.log("s3Result -=--", s3Result)
+        const imageResult = await prisma.images.create({
+            data: {
+                id: uuidv4(),
+                filename: s3Result?.Key,
+                filepath: file.path,
+                mimetype: mimetype,
+                size: size
+            }
+        })
+        res.status(200).json({ "message": "Image inserted successfully", status: true, imagePath: `/images/${s3Result.Key}`, url: s3Result?.Location })
+
+    } else {
+        console.error('Error inserting image:', error);
+        res.json({ success: false, message: 'upload failed', stack: error.stack });
+    }
 })
 
 module.exports = router;
